--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -2,20 +2,28 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>myservlet</display-name>
   <servlet>
-    <servlet-name>TestServlet</servlet-name>
-    <servlet-class>com.servlet.TestServlet</servlet-class>
+    <servlet-name>FibonacciServlet</servlet-name>
+    <servlet-class>com.servlet.FibonacciServlet</servlet-class>
   </servlet>
   <servlet>
     <servlet-name>JosephServlet</servlet-name>
     <servlet-class>com.servlet.JosephServlet</servlet-class>
   </servlet>
+   <servlet>
+    <servlet-name>JosephServletJson</servlet-name>
+    <servlet-class>com.servlet.JosephServletJson</servlet-class>
+  </servlet>
   <servlet-mapping>
-    <servlet-name>TestServlet</servlet-name>
+    <servlet-name>FibonacciServlet</servlet-name>
     <url-pattern>/one</url-pattern>
   </servlet-mapping>
-   <servlet-mapping>
+  <servlet-mapping>
     <servlet-name>JosephServlet</servlet-name>
     <url-pattern>/josephservlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>JosephServletJson</servlet-name>
+    <url-pattern>/josephservletjson</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
